# lehigh

./: README
216/: README.md
216/admin-cli/: .project  README.md  pom.xml
216/backend/: .factorypath  .gitignore  .project  pom.xml
216/web/: app.css  app.ts  apptest.ts  deploy.sh  login.html  login.ts  main.html  package-lock.json  package.json  spec_runner.html
216/web/css/: CommentList.css  ElementList.css  EntryMenu.css  Navbar.css  NewEntryForm.css  UserPage.css
216/web/hb/: CommentList.hb  EditEntryForm.hb  ElementList.hb  EntryMenu.hb  Navbar.hb  NewEntryForm.hb  UserPage.hb
216/web/ts/: CommentList.ts  EditEntryForm.ts  ElementList.ts  EntryMenu.ts  Navbar.ts  NewEntryForm.ts  UserPage.ts
241/old/: HW1.sql  HW2.sql  hw5.txt  hw6.txt
241/old/HW4/: TeachingRecords.java
242/doge-dawgs/: README.md
242/doge-dawgs/src/: Block.java  Blockchain.java  FileMan.java  Hash.java  Main.java  MerkleTree.java  POM.java  TestSuite.java  Transaction.java  Util.java  recompile  run
242/hw7/: Exchange.sol  contractInfo.txt
264/project-0-marcSoda/: README.md  index.html  main.js
264/project-1-marcSoda/: README.md  main.js
264/project-2-marcSoda/: README.md  package.json
264/project-2-marcSoda/routes/: users.js
264/project-2-marcSoda/views/: index.pug
264/project-3-marcSoda/: .env  README.md  app.js  package.json
303/: Dockerfile  README.md  run.sh
303/p0/: Makefile  README.md
303/p1/: .gitignore
303/p5/: just_my_functable.mk  just_my_storage.mk
342/smtp/: smtp.py
342/tls/: Client.py  Server.py  clientfile.txt  serverfile.txt
342/udp/: client.py  server.py
342/webserver/: landing.html  webserver.py
343/: password
343/lab2/: lab2.org
343/lab3/: lab3.org  lab3.tex
343/lab4/: lab.org  lab.tex
343/lab5/: lab5.org  lab5.tex
408/: p1  p2  readme
408/p3/: Cargo.toml  README  m3
408/p3/src/: lib.rs  (+1 more)
411/: homework-4
411/homework-1/: .gitlab-ci.yml  Cargo.toml  README.md
411/homework-2/: Cargo.toml  README.md
411/homework-2/src/: client.rs  common.rs  lib.rs  main.rs  server.rs  tests.rs
411/homework-3/: Cargo.toml  README.md
411/homework-5/: Cargo.toml  README.md
431/h1/: run
431/h2/: run
431/written_hws/: wh2.odt
447/homeworks/: h1.odt
447/p2/: final.ipynb
475/h1/: Makefile  README.txt  account.h  cashmap.h  config_t.cc  config_t.h  p1.cc  tests.cc  tests.h
475/h2/: instructions.txt  kmeans  kmeans.cpp  kmeans_mys.cpp  kms  make  make_data.py
475/h3/: Makefile  common.h  con_set.h  main.cpp  seq_set.h  tran_set.h
475/snapkv_wip/: Doxygen  runCoverage.sh
475/snapkv_wip/rslab/: CMakeLists.txt  Dockerfile  Doxygen  README.md  cicd.sh  conanfile.py
475/snapkv_wip/rslab/benchmark/: benchmark.cu  benchmark_mem.cu
475/snapkv_wip/rslab/cmake/: config.cmake
475/snapkv_wip/rslab/include/LSlab/: LSlab.h  LSlabMap.h  Operations.h  OperationsDevice.h  Pool.h  RSlabOperationsDevice.h  Slab.h  SlabData.h  StandardSlabDefinitions.h  gpumemory.h  shfl.h  stdrequestHandler.cuh
475/snapkv_wip/rslab/test/: slabunified_test.cu  slabunified_test_pt2.cu  testheader.h
robotics/exam-option-2/: README.md  make_camera.m  make_robot.m  move_robot.m  particle_filter.m  test_camera.m
robotics/homework-1/: README.md
robotics/homework-2/: README.md  benchmark.m  dual_threshold.m  non_negative_filter.m  sim_lidar_processing.m  slow_norm.m
robotics/homework-3/: README.md
robotics/homework-4/: hwk4_skeleton.m  make_camera.m  make_robot.m  move_robot.m  test_camera.m
robotics/quiz-1/: README.md
robotics/quiz-2/: README.md
robotics/quiz-3/: README.md
(+138 files in other folders)
