[package]
name = "h2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8.5"

[dev-dependencies]
assert_ok = "1.0.2"
